# PyDMD

./: .buildinfo  .checkignore  .codacy.yml  .gitattributes  .gitignore  .pylintrc  .travis.yml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  LICENSE.html  LICENSE.rst  README.md  bopdmd.html  cdmd.html  code.html  code_formatter.sh  code_of_conduct.html  contact.html  contributing.html  dev-tutorial1.html  dmd.html  dmd_modes_tuner.html  dmdbase.html  dmdc.html  dmdoperator.html  edmd.html  fbdmd.html  genindex.html  hankeldmd.html  havok.html  hodmd.html  index.html  mrdmd.html  ncdmd.py  objects.inv  optdmd.html  paramdmd.html  pidmd.html  (+22 more)
.github/: CONTRIBUTING.md
PyDMD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_modules/: index.html
_sources/: cdmd.rst.txt  code.rst.txt  code_of_conduct.rst.txt  contact.rst.txt  contributing.txt  dmd_modes_tuner.rst.txt  dmdbase.rst.txt  dmdoperator.rst.txt  mrdmd.rst.txt  optdmd.rst.txt  paramdmd.rst.txt  pidmd.rst.txt  rdmd.rst.txt  spdmd.rst.txt  subspacedmd.rst.txt  utils.rst.txt
_static/: documentation_options.js
_summaries/: pydmd.cdmd.CDMD._compress_snapshots.html  pydmd.cdmd.CDMD.atilde.html  pydmd.cdmd.CDMD.dmd_timesteps.html  pydmd.cdmd.CDMD.dynamics.html  pydmd.cdmd.CDMD.eigs.html  pydmd.cdmd.CDMD.fit.html  pydmd.cdmd.CDMD.modes.html  pydmd.cdmd.CDMD.original_timesteps.html  pydmd.cdmd.CDMD.plot_eigs.html  pydmd.cdmd.CDMD.plot_modes_2D.html  pydmd.cdmd.CDMD.plot_snapshots_2D.html  pydmd.cdmd.CDMD.reconstructed_data.html  pydmd.cdmd.CDMD.snapshots.html  pydmd.dmd.DMD.atilde.html  pydmd.dmd.DMD.dmd_timesteps.html  pydmd.dmd.DMD.dynamics.html  pydmd.dmd.DMD.eigs.html  pydmd.dmd.DMD.fit.html  pydmd.dmd.DMD.modes.html  pydmd.dmd.DMD.original_timesteps.html  pydmd.dmd.DMD.plot_eigs.html  pydmd.dmd.DMD.plot_modes_2D.html  pydmd.dmd.DMD.plot_snapshots_2D.html  pydmd.dmd.DMD.reconstructed_data.html  pydmd.dmd.DMD.snapshots.html  pydmd.dmdbase.DMDBase._build_lowrank_op.html  pydmd.dmdbase.DMDBase._col_major_2darray.html  (+85 more)
(+423 files in other folders)
